# rag_pipeline

./: README.md  pyproject.toml
app/: api.py  docstore.py  generator.py  index_loader.py  main.py  prompt_templates.py  ratelimiter.py  retriever.py  tokenlogger.py
app/api/: routes.py
app/core/: dependencies.py  generator.py  pydantic_models.py  retriever.py
app/rag/: agentic_rag.py  base.py  simple_rag.py
app/utils/: logging.py
config/: .secrets.toml  .secrtets.toml  RagConfig.toml
ingestion_pipeline/: chunker.py  documentparser.py  filetracker.py  indexer.py  ingest.py  loader.py  store.py
