[project]
name = "rag-pipeline"
version = "0.1.0"
requires-python = ">=3.9,<3.12"
dependencies = [
    "accelerate==1.6.0",
    "beautifulsoup4>=4.13.4",
    "dynaconf>=3.2.11",
    "faiss-gpu-cu11>=1.11.0",
    "fastapi>=0.116.1",
    "html5lib>=1.1",
    "huggingface-hub>=0.33.4",
    "huggingface-hub[cli]>=0.33.4",
    "langchain-community[sql]>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.28",
    "llama-index>=0.12.48",
    "llama-index-core>=0.12.48",
    "lxml>=6.0.0",
    "markdown>=3.8.2",
    "numpy<2",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.8.0.74",
    "pillow==9.3.0",
    "pymupdf==1.26",
    "sentence-transformers>=5.0.0",
    "tabulate>=0.9.0",
    "timm==0.5.4",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "transformers==4.47.0",
    "uvicorn>=0.35.0",
]

